manifests/media/qbittorrent/qbittorrent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
        fsGroup: 0
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent@sha256:4d651284a42e8ae33f23d41a0ccfdfff8ab8ebee28099fd030d9e858dbbbdf38
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "4Gi"
            requests:
              memory: "1Gi"
          securityContext:
            allowPrivilegeEscalation: true
            runAsUser: 0
            runAsNonRoot: false
            privileged: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: config
              mountPath: /config
            - name: qbittorrent-media
              mountPath: /downloads
              subPath: qbittorrent_downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: qbittorrent-media
          persistentVolumeClaim:
            claimName: qbittorrent-media
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: qbittorrent
spec:
  ingressClassName: nginx
  rules:
    - host: qbittorrent.cluster.nelsondane.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: qbittorrent
              port:
                number: 8080
